nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: proxy
  namespace: deployment
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
      - containerPort: 80
        name: http-web-svc

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: deployment
spec:
  selector:
    app.kubernetes.io/name: proxy
  ports:
  - name: nginx-service
    protocol: TCP
    port: 80
    targetPort: 8080
